# detrflow

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  schemas.py
configs/: rtdetr_r50_coco.yaml
demo/: app.py
inference/: __init__.py  criterion.py  matcher.py  predictor.py  visualizer.py
notebooks/: detrflow_training.ipynb
scripts/: benchmark.py  evaluate.py  generate_preview.py  train.py
tests/: test_matcher.py
